# rag_resume

./: main.py  pyproject.toml  requirements.txt
api/: ask.py  main.py
